stop checkbox label text from wrapping under checkbox

--- a/app/assets/stylesheets/local/inputs.scss
+++ b/app/assets/stylesheets/local/inputs.scss
@@ -61,3 +61,11 @@ table.income {
     }
   }
 }
+
+.form-checkbox {
+  display: table;
+
+  input, span {
+    display: table-cell;
+  }
+}
